--- a/package.json
+++ b/package.json
@@ -6,22 +6,30 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "sb:dev": "storybook dev -p 6006 --no-open",
+    "sb:dev:docs": "storybook dev -p 6006 --docs --no-open",
+    "sb:build": "storybook build --docs",
+    "sb:preview": "vite preview --host --outDir=storybook-static"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vueless": "^1.3.0"
   },
   "devDependencies": {
     "@eslint/css": "^0.13.0",
     "@eslint/js": "^9.38.0",
     "@eslint/json": "^0.13.2",
     "@eslint/markdown": "^7.5.0",
+    "@storybook/builder-vite": "^9.1.14",
+    "@storybook/vue3": "^9.1.14",
     "@types/node": "^24.6.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "@vueless/storybook": "^1.2.10",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
